# hetero-paged-infer

./: .gitignore  AGENTS.md  AGENTS.zh.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  README.zh.md  RELEASE_NOTES.md  _config.yml  config.example.json  index.md  mkdocs.yml  mkdocs.zh.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
.kiro/specs/heterogeneous-inference-system/: design.md  requirements.md  tasks.md
benches/: engine_benchmark.rs
changelog/: 2026-03-10_workflow-deep-standardization.en.md  2026-03-10_workflow-deep-standardization.md  2026-03-13_workflow-cpu-safe-ci.en.md  2026-03-13_workflow-cpu-safe-ci.md  2026-04-16_documentation-overhaul.en.md  2026-04-16_documentation-overhaul.md
docs/assets/javascripts/: extra.js  (+1 more)
docs/en/: CONFIGURATION.md  DEPLOYMENT.md  README.md  index.md
docs/landing/: index.html  zh.html
docs/zh/: API.md  README.md  index.md
examples/: basic_usage.rs  batch_processing.rs  custom_config.rs
openspec/: AGENTS.md  project.md
openspec/archive/: README.md
specs/: README.md
specs/api/: README.md  openapi.yaml
specs/db/: README.md  schema.sql
specs/product/: heterogeneous-inference-engine.md
specs/rfc/: 0001-heterogeneous-inference-architecture.md  0001-implementation-tasks.md
specs/testing/: inference-engine.feature
src/: config.rs  engine.rs  error.rs  gpu_executor.rs  kv_cache.rs  lib.rs  main.rs  scheduler.rs  server.rs  test_utils.rs  tokenizer.rs  types.rs
tests/: integration_tests.rs  server_integration.rs
(+44 files in other folders)
