[package]
name = "hetero-infer"
version = "0.1.0"
edition = "2021"
description = "Heterogeneous Inference System with CPU-GPU co-execution"
authors = ["Developer"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.6", features = ["derive"] }
tokenizers = "0.19"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync"] }
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "engine_benchmark"
harness = false

[features]
default = []
cuda = []

[[bin]]
name = "hetero-infer"
path = "src/main.rs"

[lib]
name = "hetero_infer"
path = "src/lib.rs"
